refactor(export): modernize DDIExportUtilTest with param tests + XMLUnit
- Use JUnit5 parameterized tests for examples to simplify test code
- Create DOMs via JSoup and compare HTML with XMLUnit diff
- Remove fixed ordering via proper atomization
- Update to latest JSoup version